fix image alignment for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -8,15 +8,16 @@ span:lang(cn) {
   font-family: sans-serif;
 }
 .temp > li > a {
+  display: inline;
   padding: 0px 15px !important;
 }
 .temp > li > a:hover,
 .temp > li > a:focus {
-  text-decoration: none;
+  text-decoration: underline;
   background-color: transparent;
 }
 .temp > li.disabled > a:hover,
 .temp > li.disabled > a:focus {
-  text-decoration: none;
+  text-decoration: underline;
   background-color: transparent;
 }
